# rsjson

./: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  PIPELINE.md  README.md  Taskfile.yaml  build.rs  renovate.json  rsjson-1.0-1.rockspec  rsjson-template.rockspec  wrapper.c
.github/workflows/: build.yml
benchmarks/: README.md  comprehensive_benchmark.lua  run_benchmarks.sh  simple_benchmark.lua
docker/: Dockerfile  Dockerfile.lua51  Dockerfile.lua52  Dockerfile.lua53  Dockerfile.lua54  Dockerfile.luajit  TESTPLAN.md  docker-compose.yml  test-all.sh  test-simple.sh
docker/app/: index.lua  test.lua
docker/nginx/conf/: nginx.conf
rsjson/: Cargo.toml  build.rs  wrapper.c
rsjson-lua54/: Cargo.toml  build.rs  wrapper.c
rsjson-lua54/src/: lib.rs
rsjson-luajit/: Cargo.toml  build.rs
rsjson/src/: lib.rs
src/: lib.rs
src-lua/: benchmark.lua  rsjson.lua  test.lua
