[package]
name = "rsjson"
description = "A JSON encoder/decoder for Lua written in Rust using FFI"
version = "2.1.0"
edition = "2021"

[lib]
name = "rsjson"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9.9", features = ["luajit", "module"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69.4"