[workspace]
resolver = "2"
members = [
    "rsjson-luajit",
    "rsjson-lua54"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.10.0", features = ["module"] }

[workspace.dependencies.cc]
version = "1.0"

[workspace.dependencies.bindgen]
version = "0.72.0"