[package]
name = "rsjson-lua54"
description = "A JSON parser and serializer for Lua using Rust"
version = "2.1.0"
edition = "2021"

[lib]
name = "rsjson"
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
mlua = { workspace = true, features = ["lua54"] }

[build-dependencies]
cc = { workspace = true }
bindgen = { workspace = true }