[package]
name = "rsjson"
description = "A JSON parser and serializer for Lua/LuaJIT using Rust"
version = "2.3.0"
edition = "2021"
rust-version = "1.96.0"

[lib]
name = "rsjson"
crate-type = ["cdylib"]

[features]
default = ["lua54"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]

[dependencies]
serde_json = { workspace = true }
mlua = { workspace = true, features = ["module"], default-features = false }
